--- a/Day_05_Mon_2_12_2019/forum-app/index.html
+++ b/Day_05_Mon_2_12_2019/forum-app/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Forum app</title>
-    <script src="https://unpkg.com/web3/dist/web3.min.js"></script>
+    <script src="http://web3examples.com/lib/web3-browserify.js"></script> 
     <script src="./abi.js"></script>
     <script src="./main.js"></script>
   </head>
